--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "elliptical-middleware",
-    "description": "Elliptical Middleware Library",
-    "version": "1.0.0",
+    "description": "Elliptical Middleware",
+    "version": "1.0.2",
     "author": "S. Francis",
     "license": "MIT",
     "repository": {
@@ -9,12 +9,11 @@
         "url": "https://github.com/tachyon1337/elliptical-middleware.git"
     },
     "devDependencies": {
-        "gulp": "^3.6.0",
+        "gulp": "^3.8.7",
         "gulp-util": "^2.2.14",
         "gulp-concat": "^2.2.0",
         "gulp-tap": "^0.1.1",
         "fs-extra": "^0.8.1",
-        "gulp-uglify": "^0.2.1",
-        "merge-stream": "^0.1.5"
+        "gulp-uglify": "^0.2.1"
     }
 }
